Bug 521764 - rapid flashing and cut-off window geometry on a secondary monitor only when it is configured in portrait mode
Summary: rapid flashing and cut-off window geometry on a secondary monitor only when i...
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: multi-screen (other bugs)
Version First Reported In: 6.7.0
Platform: CachyOS Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL: https://gitlab.freedesktop.org/drm/am...
Keywords:
: 521669 522137 522284 (view as bug list)
Depends on:
Blocks:
 
Reported: 2026-06-19 14:02 UTC by JoeC
Modified: 2026-06-30 11:31 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Picture of multimonitor setup with my secondary monitor in portrait mode afer pressing META+W (Present windows) (630.44 KB, image/png)
2026-06-19 14:02 UTC, JoeC
Details

Note You need to log in before you can comment on or make changes to this bug.
Description JoeC 2026-06-19 14:02:06 UTC
Created attachment 193368 [details]
Picture of multimonitor setup with my secondary monitor in portrait mode afer pressing META+W (Present windows)

DESCRIPTION
After upgrading to Plasma 6.7.0, using the "Present Windows" effect (Meta+W) causes severe rendering regressions on a multi-monitor configuration utilizing mixed orientations and fractional scaling. Specifically, when a secondary monitor is rotated into portrait mode, entering the Present Windows view causes rapid, aggressive screen flashing/flickering and cleanly cuts off the window geometry on that display.

This issue appears to be directly tied to the DRM Direct Scanout optimization layer on AMD hardware under Wayland. Forcing the compositor to bypass direct scanout completely eliminates the geometry clipping and flashing.

STEPS TO REPRODUCE

    Set up a dual-monitor configuration with an AMD RX 580 GPU on Wayland.

    Configure the primary display in landscape mode (2560x1440) and the secondary display in portrait mode (1200x1600, 1.33x fractional scaling).

    Open several application windows across both displays.

    Trigger the "Present Windows" effect using Meta+W.

OBSERVED RESULT
The windows on the landscape monitor scale normally, but the secondary portrait display experiences rapid buffer flashing/flickering. The window previews on the portrait display are visually cut off, misaligned with the actual screen geometry, and unusable until the effect is dismissed.

EXPECTED RESULT
The Present Windows effect should cleanly and smoothly tile open windows across all displays simultaneously, respecting the vertical/horizontal boundaries and scaling factors of mixed-orientation layouts without flickering.

SOFTWARE/OS VERSIONS

    Operating System: CachyOS x86_64 (Kernel: Linux 7.0.12-1-cachyos)

    KDE Plasma Version: 6.7.0

    KDE Frameworks Version: 6.7.0

    Qt Version: 6.7.0

    Graphics Platform: Wayland

ADDITIONAL INFORMATION

    Hardware: Intel Xeon E5-2673 v4 | AMD Radeon RX 580 Series

    Monitor Setup: LG QHD (2560x1440 @ 144Hz, Landscape) + DELL 2007FP (1200x1600 @ 60Hz, Portrait, 1.33x Scaling)

    Workaround Identified: Adding KWIN_DRM_NO_DIRECT_SCANOUT=1 to /etc/environment and restarting the session completely resolves the bug. Present Windows functions flawlessly with this flag active, strongly pointing to an issue with how scene-drm handles coordinate scaling calculations for rotated buffers during direct scanout handoffs on Polaris/AMD open-source drivers.
Comment 1 Bug Janitor Service 2026-06-19 18:33:47 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/9431
Comment 2 Zamundaaa 2026-06-20 14:13:21 UTC
*** Bug 521669 has been marked as a duplicate of this bug. ***
Comment 3 Zamundaaa 2026-06-24 20:29:31 UTC
*** Bug 522137 has been marked as a duplicate of this bug. ***
Comment 4 Zamundaaa 2026-06-29 12:15:43 UTC
*** Bug 522284 has been marked as a duplicate of this bug. ***
Comment 5 Zamundaaa 2026-06-30 11:07:33 UTC
Git commit e3cae44be8347e4c0df058bab04f3fba4bca6050 by Xaver Hugl.
Committed on 30/06/2026 at 10:42.
Pushed by zamundaaa into branch 'master'.

backends/drm: disable hardware rotation on older AMD GPUs

It can be re-enabled with KWIN_ENABLE_HW_ROTATION=1 for testing driver fixes.

M  +11   -2    src/backends/drm/drm_egl_layer.cpp

https://invent.kde.org/plasma/kwin/-/commit/e3cae44be8347e4c0df058bab04f3fba4bca6050
Comment 6 Zamundaaa 2026-06-30 11:31:51 UTC
Git commit e34ec104bd373692eeb167947654e8411ccb1c1c by Xaver Hugl.
Committed on 30/06/2026 at 11:10.
Pushed by zamundaaa into branch 'Plasma/6.7'.

backends/drm: disable hardware rotation on older AMD GPUs

It can be re-enabled with KWIN_ENABLE_HW_ROTATION=1 for testing driver fixes.
(cherry picked from commit e3cae44be8347e4c0df058bab04f3fba4bca6050)

M  +11   -2    src/backends/drm/drm_egl_layer.cpp

https://invent.kde.org/plasma/kwin/-/commit/e34ec104bd373692eeb167947654e8411ccb1c1c