backends/drm: disable hardware rotation on older AMD GPUs

It can be re-enabled with KWIN_ENABLE_HW_ROTATION=1 for testing driver fixes.

BUG: 521764
(cherry picked from commit e3cae44be8347e4c0df058bab04f3fba4bca6050)